  borders using Swing look & feel'. Both are disabled by default.
- New 'Keyboard Tester' command in Utilities->Troubleshooting menu; it
  displays a 'grab key' dialog and dumps key events into a new buffer
- Option to split file dialogs vertically (Ollie Rutherfurd)
- Plugin manager's install plugins dialog box now shows plugin download
  sizes, and has a slightly improved look

+ Enhancements

- Firewall plugin integrated into editor core
- Global Options dialog box now has an 'Overview' page
- Better GZIP file auto-detection; previously, jEdit would check for a
  filename extension of .gz, now it checks for the GZIP magic number at
  the start of the file
- Unicode files are now automatically detected as being such, and opened
  with the Unicode encoding
- 'Narrow to Fold' on a collapsed fold now automatically expands the
  fold
- The complete word changes started in 4.0pre3 are now complete.
  - UP/DOWN arrow keys wrap selection around in complete word list
  - Keywords are now completed (and shown in the list in a bold font)
  - The popup is updated on the fly if you type or press BACKSPACE while
    it is showing
- In the file system browser, trying to add a file to the favorites now
  adds that file's directory to the favorites, instead of showing an
  error message
- The edit server now un-iconifies the view, if necessary
- Updated ML mode (Ingmar Stein)
- Printing code rewritten to use Java 2 print API. The only user-visible
  change is that the printed output is now word-wrapped.
- The file system browser now preserves expansion state when reloading
  directories
- On Unix operating systems, the roots: VFS is no longer available,
  since it is not necessary (Unix systems have a single file system
  root, /)
- Changed file system browser to underline open files, not show a black
  chunk next to their names
- Closed three possible holes in the edit server:
  - Opening a socket and leaving it open no longer stops other clients